--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,7 @@ menu:
   categories: /categories/|| th
   archives: /archives/|| archive
   schedule: /schedule/|| calendar
+  book: /|| book
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404/ || heartbeat
 
@@ -154,7 +155,7 @@ links_layout: block
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
 # in site  directory(source/uploads): /uploads/avatar.gif
-#avatar: /images/avatar.gif
+avatar: /images/header.gif
 
 # Table Of Contents in the Sidebar
 toc:
