--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ menu:
   about: /about/|| user
   tags: /tags/|| tags
   categories: /categories/|| th
-  archives: /archives/|| archive
+  archives: /archives/
   #schedule: /schedule/|| calendar
   book: /book/|| book
   
